--- a/paper-tex/tex-ongoing-from-kv-final/paper/app2_sch367.tex
+++ b/paper-tex/tex-ongoing-from-kv-final/paper/app2_sch367.tex
@@ -3,7 +3,7 @@
 \label{sec:sch367}
 %START of macro ============
 
-We list of degree 2 tableaux which cannot be split directly. All data of computation is available on github\footnote{add correct link after making github repo public}.
+We list of degree 2 tableaux which cannot be split directly. All data of computation is available on github\footnote{https://github.com/somnathcmi/flag-varieties/tree/master/codes/paper\_data/generated\_data}.
 \begin{align*}
     &t_0 = 
 \begin{array}[c]{*{14}c}\cline{1-14}
