--- a/paper-tex/paper-feb10-2/main.tex
+++ b/paper-tex/paper-feb10-2/main.tex
@@ -17,6 +17,7 @@ K. Venkata Subrahmanyam \thanks {Chennai Mathematical Institute, Chennai, India.
 \input{abstract.tex}
 
 \input{introduction}
+{\bf{Acknowledgement: }}All three authors were partially supported by a grant from the Infosys foundation. The second and third authors were supported by a grant under the MATRICS scheme of the Department of Science and Technology.
 \input{background_kannan}
 \input{T_action_preliminaries}
 \input{hb_as_Tinv_gens}
